--- a/index.html
+++ b/index.html
@@ -8,5 +8,63 @@
 </head>
 <body>
     
+
+
+
+    <section>
+        <h2>Nasz zespół</h2>
+        <ul>
+          <li>
+            <div>
+              <img
+                src="images/Nasz_zespół/img.jpg"
+                alt="John Doe Product Designer"
+                width="400"
+                height="400"
+              />
+              <h3>John Doe</h3>
+              <p>Product Designer</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img
+                src="images/Nasz_zespół/img(1).jpg"
+                alt="John Doe Frontend Developer"
+                width="400"
+                height="400"
+              />
+              <h3>John Doe</h3>
+              <p>Frontend Developer</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img
+                src="images/Nasz_zespół/img(2).jpg"
+                alt="John Doe Marketing"
+                width="400"
+                height="400"
+              />
+              <h3>John Doe</h3>
+              <p>Marketing</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img
+                src="images/Nasz_zespół/img(3).jpg"
+                alt="John Doe UI Designer"
+                width="400"
+                height="400"
+              />
+              <h3>John Doe</h3>
+              <p>UI Designer</p>
+            </div>
+          </li>
+        </ul>
+      </section>
+
+      
 </body>
 </html>
