--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <title>Webstudio</title>
 </head>
 <body>
-    <header></header>
+<header>
+<h1><a href="text">Webstudio</a></h1>
+<nav>
+<ul>
+<li>Agencja</li>
+<li>Portfolio</li>
+<li>Kontakt</li>
+</ul>
+</nav>
+<div>
+
+</div>
+
+    </header>
 
 
 
