--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </ul>
 </nav>
 <div>
-
+<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+<a href="tel:+48 111 111 111">+48 111 111 111</a>
 </div>
-
-    </header>
+</header>
 
 
 
