--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-<h1><a href="text">Webstudio</a></h1>
+<a href="text"><h2>Webstudio</h2></a>
 <nav>
 <ul>
 <li>Agencja</li>
@@ -21,7 +21,11 @@
 <a href="tel:+48 111 111 111">+48 111 111 111</a>
 </div>
 </header>
+<main>
 
+
+
+</main>
 
 
     <section>
