--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <header>
-<a href="text"><h2>Webstudio</h2></a>
+<a href="text"><h1>Webstudio</h1></a>
 <nav>
 <ul>
-<li>Agencja</li>
-<li>Portfolio</li>
-<li>Kontakt</li>
+<li><a href="">Agencja</a></li>
+<li><a href="">Portfolio</a></li>
+<li><a href="">Kontakt</a></li>
 </ul>
 </nav>
 <div>
@@ -22,11 +22,11 @@
 </div>
 </header>
 <main>
+<button type="button">Zamów usługę</button>
+<section>
 
 
-
-</main>
-
+</section>
 
     <section>
         <h2>Nasz zespół</h2>
