--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
         <h2>Nasz zespół</h2>
         <ul>
           <li>
-        
-              <img
-                src="images/Nasz_zespół/img.jpg"
+              <img src="images/human1.jpg"
                 alt="John Doe Product Designer"
-                width="400"
-                height="400"
+                width="270"
+                height="260"
               />
               <h3>John Doe</h3>
               <p>Product Designer</p>
