--- a/index.html
+++ b/index.html
@@ -41,31 +41,30 @@
               <p>Product Designer</p>
           </li>
           <li>
-              <img
-                src="images/Nasz_zespół/img(1).jpg"
+              <img src="images/human2.jpg"
                 alt="John Doe Frontend Developer"
-                width="400"
-                height="400"
+                width="270"
+                height="260"
               />
               <h3>John Doe</h3>
               <p>Frontend Developer</p>
          </li>
           <li>
               <img
-                src="images/Nasz_zespół/img(2).jpg"
+                src="images/human3.jpg"
                 alt="John Doe Marketing"
-                width="400"
-                height="400"
+                width="270"
+                height="260"
               />
               <h3>John Doe</h3>
               <p>Marketing</p>
          </li>
           <li>
              <img
-                src="images/Nasz_zespół/img(3).jpg"
+                src="images/human4.jpg"
                 alt="John Doe UI Designer"
-                width="400"
-                height="400"
+                width="270"
+                height="260"
               />
               <h3>John Doe</h3>
               <p>UI Designer</p>
