--- a/index.html
+++ b/index.html
@@ -27,51 +27,32 @@
 
 
 </section>
-
     <section>
         <h2>Nasz zespół</h2>
         <ul>
           <li>
-              <img src="images/human1.jpg"
-                alt="John Doe Product Designer"
-                width="270"
-                height="260"
-              />
+              <img src="images/human1.jpg" alt="John Doe Product Designer" width="270" height="260"/>
               <h3>John Doe</h3>
               <p>Product Designer</p>
           </li>
           <li>
-              <img src="images/human2.jpg"
-                alt="John Doe Frontend Developer"
-                width="270"
-                height="260"
-              />
+              <img src="images/human2.jpg" alt="John Doe Frontend Developer"width="270" height="260"/>
               <h3>John Doe</h3>
               <p>Frontend Developer</p>
          </li>
           <li>
-              <img
-                src="images/human3.jpg"
-                alt="John Doe Marketing"
-                width="270"
-                height="260"
-              />
+              <img src="images/human3.jpg" alt="John Doe Marketing" width="270" height="260"/>
               <h3>John Doe</h3>
               <p>Marketing</p>
          </li>
           <li>
-             <img
-                src="images/human4.jpg"
-                alt="John Doe UI Designer"
-                width="270"
-                height="260"
-              />
+             <img src="images/human4.jpg" alt="John Doe UI Designer" width="270" height="260"/>
               <h3>John Doe</h3>
               <p>UI Designer</p>
          </li>
         </ul>
       </section>
-      </main>
+</main>
 <footer>
 
 
