--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 <main>
 <button type="button">Zamów usługę</button>
 <section>
-
+<h2>Czym się zajmujemy</h2>
+<img src="images/image1.jpg" alt="tablet and keyboard" width="370" heigth="274"/>
+<img src="images/image2.jpg" alt="laptop and smartphone" width="370" height="274"/>
+<img src="images/image3.jpg" alt="tablet" width="370" height="274"/>
 
 </section>
     <section>
