--- a/index.html
+++ b/index.html
@@ -23,6 +23,35 @@
 </header>
 <main>
 <button type="button">Zamów usługę</button>
+
+<section>
+<div>
+<ul>
+<h2>Lorem ipsum</h2>
+<li>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
+    Interdum et malesuada
+</li>
+<h2>Lorem ipsum</h2>
+<li>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
+    Interdum et malesuada
+</li>
+<h2>Lorem ipsum</h2>
+<li>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
+    Interdum et malesuada
+</li>
+<h2>Lorem ipsum</h2>
+<li>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
+    Interdum et malesuada
+</li>
+</div>
+
+
+</section>
+
 <section>
 <h2>Czym się zajmujemy</h2>
 <img src="images/image1.jpg" alt="tablet and keyboard" width="370" heigth="274"/>
@@ -31,6 +60,7 @@
 
 </section>
     <section>
+        <div>
         <h2>Nasz zespół</h2>
         <ul>
           <li>
@@ -54,6 +84,7 @@
               <p>UI Designer</p>
          </li>
         </ul>
+        </div>
       </section>
 </main>
 <footer>
