--- a/index.html
+++ b/index.html
@@ -64,22 +64,22 @@
         <h2>Nasz zespół</h2>
         <ul>
           <li>
-              <img src="images/human1.jpg" alt="John Doe Product Designer" width="270" height="260"/>
+              <img src="images/human productdesigner.jpg" alt="John Doe Product Designer" width="270" height="260"/>
               <h3>John Doe</h3>
               <p>Product Designer</p>
           </li>
           <li>
-              <img src="images/human2.jpg" alt="John Doe Frontend Developer"width="270" height="260"/>
+              <img src="images/human frontend developer.jpg" alt="John Doe Frontend Developer"width="270" height="260"/>
               <h3>John Doe</h3>
               <p>Frontend Developer</p>
          </li>
           <li>
-              <img src="images/human3.jpg" alt="John Doe Marketing" width="270" height="260"/>
+              <img src="images/human marketing.jpg" alt="John Doe Marketing" width="270" height="260"/>
               <h3>John Doe</h3>
               <p>Marketing</p>
          </li>
           <li>
-             <img src="images/human4.jpg" alt="John Doe UI Designer" width="270" height="260"/>
+             <img src="images/human uidesigner.jpg" alt="John Doe UI Designer" width="270" height="260"/>
               <h3>John Doe</h3>
               <p>UI Designer</p>
          </li>
@@ -88,10 +88,14 @@
       </section>
 </main>
 <footer>
-<h2>Webstudio</h2>
-<adress>
-
+<div>
+    <h2>Webstudio</h2>
+<address>
+    m. Warszawa, Aleje Jerozolimskie 21    
+    <a href="mailto:info@example.com">info@example.com</a>
+    <a href="tel:+48 111 111 111">+48 111 111 111</a>
 </adress>
+</div>
 </footer>
 
 </body>
