--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </div>
 </header>
 <main>
+<a href="text">Efektywne rozwiązania dla naszego bisnesu</a>
 <button type="button">Zamów usługę</button>
 
 <section>
@@ -48,8 +49,6 @@
     Interdum et malesuada
 </li>
 </div>
-
-
 </section>
 
 <section>
@@ -89,7 +88,7 @@
 </main>
 <footer>
 <div>
-    <h2>Webstudio</h2>
+    <a href="text"><h3>Webstudio</h3></a>
 <address>
     m. Warszawa, Aleje Jerozolimskie 21    
     <a href="mailto:info@example.com">info@example.com</a>
