--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </nav>
 <div>
 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-<a href="tel:+48 111 111 111">+48 111 111 111</a>
+<a href="tel:48 111 111 111">+48 111 111 111</a>
 </div>
 </header>
 <main>
@@ -28,23 +28,23 @@
 <section>
 <div>
 <ul>
-<h2>Lorem ipsum</h2>
 <li>
+<h2>Lorem ipsum</h2>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
     Interdum et malesuada
 </li>
-<h2>Lorem ipsum</h2>
 <li>
+    <h2>Lorem ipsum</h2>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
     Interdum et malesuada
 </li>
-<h2>Lorem ipsum</h2>
 <li>
+    <h2>Lorem ipsum</h2>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
     Interdum et malesuada
 </li>
-<h2>Lorem ipsum</h2>
 <li>
+    <h2>Lorem ipsum</h2>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
     Interdum et malesuada
 </li>
@@ -89,13 +89,10 @@
 <footer>
 <div>
     <a href="text"><h3>Webstudio</h3></a>
-<address>
-    m. Warszawa, Aleje Jerozolimskie 21    
+<address>m. Warszawa, Aleje Jerozolimskie 21    
     <a href="mailto:info@example.com">info@example.com</a>
-    <a href="tel:+48 111 111 111">+48 111 111 111</a>
-</adress>
+    <a href="tel:48 111 111 111">+48 111 111 111</a></adress>
 </div>
 </footer>
-
 </body>
 </html>
