--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
         <h2>Nasz zespół</h2>
         <ul>
           <li>
-              <img src="images/human productdesigner.jpg" alt="John Doe Product Designer" width="270" height="260"/>
+              <img src="images/human-productdesigner.jpg" alt="John Doe Product Designer" width="270" height="260"/>
               <h3>John Doe</h3>
               <p>Product Designer</p>
           </li>
           <li>
-              <img src="images/human frontend developer.jpg" alt="John Doe Frontend Developer"width="270" height="260"/>
+              <img src="images/human-frontend-developer.jpg" alt="John Doe Frontend Developer" width="270" height="260"/>
               <h3>John Doe</h3>
               <p>Frontend Developer</p>
          </li>
           <li>
-              <img src="images/human marketing.jpg" alt="John Doe Marketing" width="270" height="260"/>
+              <img src="images/human-marketing.jpg" alt="John Doe Marketing" width="270" height="260"/>
               <h3>John Doe</h3>
               <p>Marketing</p>
          </li>
           <li>
-             <img src="images/human uidesigner.jpg" alt="John Doe UI Designer" width="270" height="260"/>
+             <img src="images/human-uidesigner.jpg" alt="John Doe UI Designer" width="270" height="260"/>
               <h3>John Doe</h3>
               <p>UI Designer</p>
          </li>
@@ -87,12 +87,10 @@
       </section>
 </main>
 <footer>
-<div>
     <a href="text"><h3>Webstudio</h3></a>
-<address>m. Warszawa, Aleje Jerozolimskie 21    
+<address> m. Warszawa, Aleje Jerozolimskie 21</address>    
     <a href="mailto:info@example.com">info@example.com</a>
-    <a href="tel:48 111 111 111">+48 111 111 111</a></adress>
-</div>
+    <a href="tel: +48 111 111 111"> +48 111 111 111</a>
 </footer>
 </body>
 </html>
