--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </nav>
 <div>
 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-<a href="tel:48 111 111 111">+48 111 111 111</a>
+<a href="tel:+48111111111">+48 111 111 111</a>
 </div>
 </header>
 <main>
@@ -52,7 +52,7 @@
 
 <section>
 <h2>Czym się zajmujemy</h2>
-<img src="images/image1.jpg" alt="tablet and keyboard" width="370" heigth="274"/>
+<img src="images/image1.jpg" alt="tablet and keyboard" width="370" height="274"/>
 <img src="images/image2.jpg" alt="laptop and smartphone" width="370" height="274"/>
 <img src="images/image3.jpg" alt="tablet" width="370" height="274"/>
 
@@ -89,7 +89,7 @@
     <a href="text"><h3>Webstudio</h3></a>
 <address> m. Warszawa, Aleje Jerozolimskie 21</address>    
     <a href="mailto:info@example.com">info@example.com</a>
-    <a href="tel: +48 111 111 111"> +48 111 111 111</a>
+    <a href="tel:+48111111111"> +48 111 111 111</a>
 </footer>
 </body>
 </html>
