--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
 </header>
 <main>
-<a href="text">Efektywne rozwiązania dla Waszego bisnesu</a>
+<p>Efektywne rozwiązania dla Waszego bisnesu</p>
 <button type="button">Zamów usługę</button>
 
 <section>
