--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <a href="text"><h1>Webstudio</h1></a>
 <nav>
 <ul>
-<li><a href="">Agencja</a></li>
-<li><a href="">Portfolio</a></li>
-<li><a href="">Kontakt</a></li>
+    <li><a href="">Agencja</a></li>
+    <li><a href="">Portfolio</a></li>
+    <li><a href="">Kontakt</a></li>
 </ul>
 </nav>
 <div>
@@ -22,31 +22,32 @@
 </div>
 </header>
 <main>
+    <section>
 <p>Efektywne rozwiązania dla Waszego bisnesu</p>
 <button type="button">Zamów usługę</button>
-
+    </section>
 <section>
 <ul>
-<li>
+    <li>
 <h2>Lorem ipsum</h2>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
     Interdum et malesuada
-</li>
-<li>
+    </li>
+    <li>
     <h2>Lorem ipsum</h2>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
     Interdum et malesuada
-</li>
-<li>
+    </li>
+    <li>
     <h2>Lorem ipsum</h2>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
     Interdum et malesuada
-</li>
-<li>
+    </li>
+    <li>
     <h2>Lorem ipsum</h2>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
     Interdum et malesuada
-</li>
+    </li>
 </ul>
 </section>
 
