--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
 <ul>
     <li>
 <h2>Lorem ipsum</h2>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
-    Interdum et malesuada
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
+    Interdum et malesuada </p>
     </li>
     <li>
     <h2>Lorem ipsum</h2>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
-    Interdum et malesuada
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
+    Interdum et malesuada </p>
     </li>
     <li>
     <h2>Lorem ipsum</h2>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
-    Interdum et malesuada
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
+    Interdum et malesuada </p>
     </li>
     <li>
     <h2>Lorem ipsum</h2>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
-    Interdum et malesuada
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
+    Interdum et malesuada </p>
     </li>
 </ul>
 </section>
