--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
 </section>
 
 <section>
+    <ul>
 <h2>Czym się zajmujemy</h2>
-<img src="images/image1.jpg" alt="tablet and keyboard" width="370" height="274"/>
-<img src="images/image2.jpg" alt="laptop and smartphone" width="370" height="274"/>
-<img src="images/image3.jpg" alt="tablet" width="370" height="274"/>
-
+    <li><img src="images/image1.jpg" alt="tablet and keyboard" width="370" height="274"/></li>
+    <li><img src="images/image2.jpg" alt="laptop and smartphone" width="370" height="274"/></li>
+    <li><img src="images/image3.jpg" alt="tablet" width="370" height="274"/></li>
+        </ul>
 </section>
     <section>
         <div>
