--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </header>
 <main>
     <section>
-<p>Efektywne rozwiązania dla Waszego bisnesu</p>
+<h2>Efektywne rozwiązania dla Waszego bisnesu</h2>
 <button type="button">Zamów usługę</button>
     </section>
 <section>
